correção no nav

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </header>
 
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale conosco</a>
+        <a href="main" target="_self">Home</a>
+        <a href="aside" target="_self">Curiosidades</a>
+        <a href="footer" target="_self">Fale conosco</a>
 
     </nav>
 
